# automatisations

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  start-local.sh
.codex/environments/: environment.toml
.github/workflows/: docker-publish.yml
apps/api/app/: auth.py  main.py
apps/workers/: cli.py
config/contracts/: accounting_rule.json  entry_template.json  interfast_cache.json  ocr_normalized.json
config/document_naming/: ccm_v1.json
config/excel_mappings/: chantiers.example.json  client_grand_livre.example.json  grand_livre.example.json  purchases.example.json  tresorerie.example.json  tva.example.json
config/rules/: interfast_endpoints.example.json  interfast_endpoints.json  supplier_rules.example.json
config/templates/: credit_note.example.json  purchase_invoice.example.json  sales_invoice.example.json
docs/: architecture.md  client-access-checklist.md  deployment.md  local-mail-poc.md  manuel-utilisateur-automatisation.md
docs/runbooks/: go-live.md  recovery.md
infra/compose/: Dockerfile  docker-compose.nas.yml  docker-compose.yml
n8n/workflows/: bank_import_and_export.json  document_email_ingest.json  document_manual_ingest.json  interfast_sync.json
scripts/: generate_user_manual_pdf.py  init_db.py  run_api.sh  run_mail_worker.sh  run_worker.sh
tests/: conftest.py  test_accounting.py  test_api.py  test_banking_exports.py  test_document_naming.py  test_documents.py  test_excel_client_mapping.py  test_mail_worker.py  test_nas_excel.py  test_ocr_marketplace.py  test_routing.py  test_settings.py
(+41 files in other folders)
