[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automatisations-platform"
version = "0.1.0"
description = "Plateforme NAS-first d'automatisation comptable"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.116,<0.117",
  "uvicorn[standard]>=0.35,<0.36",
  "jinja2>=3.1,<3.2",
  "httpx>=0.28,<0.29",
  "mistralai==2.0.0",
  "openpyxl>=3.1,<3.2",
  "rapidfuzz>=3.14,<3.15",
  "pydantic>=2.11,<2.12",
  "pydantic-settings>=2.11,<2.12",
  "python-multipart>=0.0.20,<0.0.21",
  "reportlab>=4.4,<4.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0,<10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
